# refgate

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude/: settings.refgate.example.json
.claude/hooks/: refgate-post-edit-reminder.sh
.github/workflows/: ci.yml  release.yml
docs/: claude_code.md  codex_plugin_distribution.md  design.md  live_smoke_reviewed_manifest.md  paper_repo_agents_template.md  paper_repo_ci.md  release.md  roadmap.md  tool_interface.md
examples/paper-repo/: AGENTS.md  README.md
examples/reference-fixture/: refgate_claim_review.md  refgate_claims.tsv  sample_queries.json  sample_refgate_audit.md
src/refgate/: __init__.py  assist.py  audit.py  auth.py  bibtex.py  bibtex_sync.py  bootstrap.py  cache.py  claim_audit.py  claim_consistency.py  claim_source_check.py  cli.py  codex_review.py  handoff.py  (+17 more)
tests/: test_acl_adapter.py  test_arxiv_adapter.py  test_arxiv_adapter_live.py  test_auth.py  test_bibtex_audit.py  test_bibtex_parser.py  test_bibtex_sync.py  test_claim_audit.py  test_claim_report.py  test_claim_stubs.py  test_claude_code_pack.py  test_cli_surface.py  test_codex_review.py  test_direct_verification.py  test_discovery_adapters.py  test_docs_examples.py  test_evidence_suggest.py  test_fixture_matrix.py  test_handoff.py  test_live_smoke.py  test_lockfile_cache_and_golden.py  test_official_html_adapters.py  test_official_venue_adapters.py  test_plugin_packaging.py  test_resolver.py  test_source_download.py  test_source_text.py  test_source_title_check.py  test_tex_includes.py
(+77 files in other folders)
