[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "refgate"
version = "0.1.0"
description = "Deterministic reference verification and BibTeX provenance gate for academic manuscripts"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Refgate contributors" }]
dependencies = []
keywords = ["bibtex", "citations", "manuscripts", "references", "research"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Text Processing :: Markup :: LaTeX",
]

[project.urls]
Homepage = "https://github.com/lhy0718/refgate"
Repository = "https://github.com/lhy0718/refgate"
Issues = "https://github.com/lhy0718/refgate/issues"

[project.optional-dependencies]
dev = ["build>=1", "pytest>=8", "setuptools>=68", "wheel>=0.42"]
pdf = ["pypdf>=4"]

[project.scripts]
refgate = "refgate.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
